simplewebsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: simplewebsvc
  namespace: default
  labels:
    app: simplewebsvc
spec:
  ports:
    - name: tcp5000
      port: 5000
      protocol: TCP
      targetPort: 5000 # 容器端口
      nodePort: 31111
  selector:
    app: simpleweb # 指向pod
  type: NodePort
